--- a/src/index.css
+++ b/src/index.css
@@ -132,7 +132,11 @@ body{
   padding:6px 0px;
 }
 
+button{
+  padding:5px;
+  margin:3px 5px;
 
+}
 
 /* end of about css */
 
@@ -205,3 +209,4 @@ font-size: 23px;
 
 
 }
+
